# game-frameworks

./: CMakeLists.txt  README.md  conanfile.txt  sonar-project.properties
.github/workflows/: ci_pipeline.yml  cmake.yml  sonar_scan.yml
.github/workflows/apt/: action.yml
.github/workflows/composite/: conan-dependencies.yml
.github/workflows/conan/: action.yml
.github/workflows/sonar/: action.yml
.github/workflows/sonar_scan/: action.yml
.github/workflows/system_packages/: action.yml
cmake/: conan.cmake
game_frameworks/graphics/gfg2d_sdl2_window/: CMakeLists.txt
game_frameworks/graphics/gfg2d_sdl2_window/example/: main.cpp
game_frameworks/graphics/gfg2d_sdl2_window/include/gfg2d_sdl2_window/: sdl2_opengl_window.h
game_frameworks/graphics/gfg2d_sdl2_window/src/: sdl2_opengl_window.cpp
game_frameworks/graphics/gfg2d_sdl2_window/test/: main.cpp
game_frameworks_implementations/game_frameworks/: CMakeLists.txt
game_frameworks_implementations/game_frameworks/include/game_frameworks/utils/: entity_identifier.h  filename_cache.h
game_frameworks_implementations/game_frameworks/src/utils/: filename_cache.cpp
game_frameworks_implementations/game_frameworks/test/: CMakeLists.txt  dummy.cpp  main.cpp
game_frameworks_implementations/game_frameworks/test/utils/: entity_identifier.cpp  filename_cache.cpp
game_frameworks_implementations/game_frameworks_opengl/: CMakeLists.txt
game_frameworks_implementations/game_frameworks_opengl/example/: CMakeLists.txt  main.cpp
game_frameworks_implementations/game_frameworks_opengl/include/gf_opengl/: camera.h  common.h  opengl_render_api.h  texture.h
game_frameworks_implementations/game_frameworks_opengl/include/gf_opengl/font/: font.h  font_loader.h  font_utils.h
game_frameworks_implementations/game_frameworks_opengl/include/gf_opengl/maths/: transform.h
game_frameworks_implementations/game_frameworks_opengl/include/gf_opengl/mesh/: mesh_properties.h  mesh_quad.h  mesh_uploader.h  vertex.h
game_frameworks_implementations/game_frameworks_opengl/include/gf_opengl/shader/: shader.h  shader_utils.h
game_frameworks_implementations/game_frameworks_opengl/src/: gf_opengl.cpp  line_rendering.cpp  opengl_render_api.cpp  quad_rendering.cpp  sprite_rendering.cpp  texture.cpp
game_frameworks_implementations/game_frameworks_opengl/src/font/: font.cpp  font_loader.cpp  font_util.cpp
game_frameworks_implementations/game_frameworks_opengl/src/shader/: shader.cpp  shader_utils.cpp
game_frameworks_implementations/game_frameworks_opengl/test/: CMakeLists.txt  dummy.cpp  texture.cpp
game_frameworks_implementations/game_frameworks_sdl2/: CMakeLists.txt
game_frameworks_implementations/game_frameworks_sdl2/example/: CMakeLists.txt  main.cpp
game_frameworks_implementations/game_frameworks_sdl2/include/gf_sdl2_window/: sdl2_opengl_window.h
game_frameworks_implementations/game_frameworks_sdl2/src/: sdl2_opengl_window.cpp
game_frameworks_interfaces/: CMakeLists.txt  main.cpp
game_frameworks_interfaces/include/game_frameworks/: Common.h  InputApi.h  RenderingApi.h  RenderingSurfaceApi.h
game_frameworks_interfaces/include/game_frameworks/graphics/: Camera.h  Line.h  Quad.h  RenderingApi.h  Sprite.h
game_frameworks_interfaces/include/game_frameworks/interfaces/: Common.h  InputApi.h
game_frameworks_interfaces/include/game_frameworks/interfaces/graphics/: Camera.h  Font.h  Line.h  Quad.h  RenderingApi.h  Sprite.h
game_frameworks_interfaces/include/game_frameworks/interfaces/maths/: Geometry.h
game_frameworks_interfaces/include/game_frameworks/interfaces/utils/: EntityIdentifier.h
game_frameworks_interfaces/include/game_frameworks/maths/: Geometry.h
game_frameworks_interfaces/include/game_frameworks/utils/: EntityIdentifier.h  FunctionTraits.h
games/tic_tac_toe/: CMakeLists.txt
games/tic_tac_toe/test/: CMakeLists.txt
tic_tac_toe/: CMakeLists.txt
tic_tac_toe/src/: main.cpp
tic_tac_toe/test/: main.cpp
